# devleo

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSE-ASSETS.md  README.md  SECURITY.md  install.ps1  install.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
assets/: README.md
assets/approved/byte/: SHA256SUMS  pet.json  validation.json
assets/approved/leo-modes/: manifest.json
assets/approved/leo-the-dev-realistic-v2/: README.md  SHA256SUMS  chroma-despill.json  direction-blind-validation.json  direction-semantics.json  final-visual-qa.txt  look-continuity.json  pet.json  validation.json
assets/approved/standard-smooth/: manifest.json
assets/renders/: README.md
assets/source-3d/: README.md  leo-realistic-rig.blend  leo-realistic-seed.blend  leo-realistic-topology.blend  leo-realistic.blend  leo.blend
docs/: ARCHITECTURE.md  BLENDER_GAZE_MECHANICS.md  BLENDER_GESTURES.md  BLENDER_LOCOMOTION.md  BLENDER_PIPELINE.md  BLENDER_RUNTIME_EXPORT.md  BLENDER_TRANSITIONS.md  GRAPHICS_QUALITY.md  RELEASING.md
src/lion_cub_pet/: __init__.py  __main__.py  autostart.py  bubble.py  cli.py  config.py  dialogues.py  ipc.py  runtime.py
tests/: test_assets.py  test_blender_core_animations.py  test_blender_gaze_cardinals.py  test_blender_gaze_directions.py  test_blender_gestures.py  test_blender_locomotion.py  test_blender_prototype.py  test_blender_realistic_identity.py  test_blender_realistic_rig.py  test_blender_realistic_topology.py  test_blender_runtime_export.py  test_blender_sources.py  test_blender_state_poses.py  test_blender_transitions.py  test_cli.py  test_config.py  test_dialogues.py  test_drag_anchor.py  test_runtime_personality.py
tools/: build_smooth_roaming.py
tools/blender/: build_leo_scene.py  canonicalize_renders.py  export_runtime_assets.py  export_runtime_assets.sh  extract_diagonal_turnaround_textures.py  extract_turnaround_textures.py  make_core_animation_qa.py  make_deformation_qa.py  make_gaze_qa.py  make_gesture_qa.py  make_locomotion_qa.py  make_reconstruction_qa.py  make_render_qa.py  make_runtime_export_qa.py  make_state_pose_qa.py  make_topology_qa.py  make_transition_qa.py  preview_reconstructed_mesh.py  refine_realistic_leo.py  register_grounded_frames.py  render_core_animations.py  render_core_animations.sh  render_gaze_cardinals.sh  render_gaze_directions.py  render_gaze_directions.sh  render_gestures.py  render_gestures.sh  render_idle.sh  render_leo_idle.py  render_locomotion.py  render_locomotion.sh  render_realistic_deformations.py  render_realistic_identity.sh  render_realistic_rig.sh  render_realistic_topology.sh  render_state_poses.py  render_state_poses.sh  render_transitions.py  render_transitions.sh  retopologize_realistic_leo.py  (+1 more)
(+81 files in other folders)
