[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "lion-cub-pet"
version = "0.1.0"
description = "A playful cross-platform desktop lion cub that codes beside you."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "LicenseRef-Proprietary"}
authors = [{name = "Lion Cub Pet contributors"}]
dependencies = [
  "platformdirs>=4.2",
  "PySide6>=6.7",
  "pyobjc-framework-Cocoa>=10; sys_platform == 'darwin'",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11",
  "pytest>=8.2",
  "pytest-qt>=4.4",
  "ruff>=0.6",
]

[project.scripts]
lion-cub-pet = "lion_cub_pet.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lion_cub_pet"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["lion_cub_pet"]
