[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "lion-cub-pet"
version = "0.1.0"
description = "A playful cross-platform desktop lion cub that codes beside you."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT AND CC-BY-4.0"
license-files = ["LICENSE", "LICENSE-ASSETS.md"]
authors = [{name = "Lion Cub Pet contributors"}]
keywords = ["desktop-pet", "lion", "pyside6", "productivity", "mascot"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: MacOS X",
  "Environment :: Win32 (MS Windows)",
  "Environment :: X11 Applications :: Qt",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Desktop Environment",
]
dependencies = [
  "platformdirs>=4.2",
  "PySide6>=6.7",
  "pyobjc-framework-Cocoa>=10; sys_platform == 'darwin'",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "mypy>=1.11",
  "pytest>=8.2",
  "pytest-qt>=4.4",
  "ruff>=0.6",
  "twine>=5.1",
]
art = [
  "numpy>=1.26",
  "Pillow>=10.4",
]

[project.scripts]
lion-cub-pet = "lion_cub_pet.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lion_cub_pet"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["lion_cub_pet"]
